Archive2/c1/35cdbeafb9b2c6/output
main.cpp: In function 'int main()':
main.cpp:31:5: error: static assertion failed: bar has foo(double)
     static_assert( has_mem_func_foo<bar, int(int)>::value,  "bar has foo(double)" );
     ^
